# chatter-rs

./: .gitignore  attach-client-2.sh  attach-client.sh  attach-server.sh  db.sql  docker-compose.yml
chatter-client/: Cargo.toml  Dockerfile
chatter-client/src/: lib.rs  main.rs  utils.rs
chatter-server/: Cargo.toml  Dockerfile
chatter-server/src/: db_layer.rs  main.rs  temp.rs
chatter_client/: Cargo.toml  Dockerfile
chatter_client/src/: cui.rs  events.rs  main.rs  requests.rs  utils.rs
chatter_server/: Cargo.toml  Dockerfile
chatter_server/src/: db_layer.rs  main.rs
chatter_server/templates/: index.html
chatter_server/test_code/: adder.rs
db/: db.sql
