[package]
name = "chatter-client"
version = "0.1.0"
authors = ["jeffloos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "1.0.1", features = ["full"] }
serde = "1.0.94"
serde_json = "1.0.59"
