[package]
name = "chatter"
version = "0.1.0"
authors = ["jeffloos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"

dotenv = "0.15.0"
mysql = "20.1.0"

serde = "1.0.61"
serde_json = "1.0.118"
