[package]
name = "chatter"
version = "0.1.0"
authors = ["jeffloos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
mysql = "20.1.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = "1.0.94"
serde_json = "1.0.59"
log = "0.4.6"
env_logger = "0.8.2"
