[package]
name = "chatter_client"
version = "0.1.0"
authors = ["jeffloos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"]}
reqwest = "0.11.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.6"
env_logger = "0.8.2"
termion = "1.5.6"
tui = "0.14.0"
unicode-segmentation = "1.2"
unicode-width = "0.1"
rand = "0.7"
